:bug: Changing feature title letterspacing 4px -> 3px

--- a/css/refactor/includes/business-mixins.less
+++ b/css/refactor/includes/business-mixins.less
@@ -59,7 +59,7 @@
     .font-scale(1);
     font-family: @font-family-titles;
     padding: 18px;
-    letter-spacing: 4px;
+    letter-spacing: 3px;
     text-transform: uppercase;
     #utils>#pb>.after(avoid);
   }
